syntax = "proto3";
package library;
option go_package = "lib/services/proto/reservation";
import "google/protobuf/timestamp.proto";

service ReservationService {

  rpc FetchReservations (ReservationFetchRequest) returns (ReservationFetchResponse);

  rpc TakeBook (TakeBookRequest) returns (TakeBookResponse);

  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);

  rpc GetReservation(GetReservationRequest) returns (ReservationFetchResponseItem);
}

message GetReservationRequest {
  string resUid = 1;
}

message ReturnBookRequest {
  string reservationUid = 1;
  string name = 2;
  enum Condition {
    EXCELLENT = 0;
    GOOD = 1;
    BAD = 2;
  }
  Condition condition = 3;
  google.protobuf.Timestamp date = 4;
}

message ReturnBookResponse {
  bool ok = 1;
}

message TakeBookRequest {
  string name = 1;
  string bookUid = 2;
  string libraryUid = 3;
  google.protobuf.Timestamp tillDate = 4;
}

message TakeBookResponse {
  string reservationUid = 1;
  enum Status {
    RENTED = 0;
    RETURNED = 1;
    EXPIRED = 2;
  }
  Status status = 2;
  google.protobuf.Timestamp startDate = 3;
  google.protobuf.Timestamp tillDate = 4;
  string libraryUid = 5;
  string bookUid = 6;
}

message ReservationFetchRequest {
  string name = 1;
}

message ReservationFetchResponseItem {
  string reservationUid = 1;
  string libraryUid = 2;
  string bookUid = 3;
  enum Status {
    RENTED = 0;
    RETURNED = 1;
    EXPIRED = 2;
  }
  Status status = 4;
  google.protobuf.Timestamp startDate = 5;
  google.protobuf.Timestamp tillDate = 6;
}

message ReservationFetchResponse {
  repeated ReservationFetchResponseItem items = 1;
}